# tech_selection_django_react

./: .gitignore  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/accounts/: models.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/fruits/: admin.py  models.py  serializers.py  urls.py  views.py
backend/fruits/migrations/: 0001_initial.py  0002_auto_20200810_1446.py
backend/sales/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/sales/migrations/: 0001_initial.py  0002_auto_20200810_1446.py
frontend/: package-lock.json  package.json
frontend/src/: Action.ts  Api.ts  App.tsx  Auth.tsx  Context.tsx  Login.tsx  NavBar.tsx  Reducer.ts  TopPage.tsx  User.ts  index.tsx
frontend/src/api/: index.ts  useApi.ts
frontend/src/components/Auth/: index.tsx
frontend/src/components/CustomHooks/: useApi.ts
frontend/src/components/Fruit/: Form.tsx  Register.tsx  index.tsx  useFruits.ts
frontend/src/components/Login/: index.tsx
frontend/src/components/NavBar/: index.tsx
frontend/src/components/TopPage/: index.tsx
frontend/src/types/: AxiosType.ts  ResponseType.ts
