[tool.poetry]
name = "tech_selection_django_react"
version = "0.1.0"
description = ""
authors = ["kynefuk <atsuminamihira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
djangorestframework = "^3.11.1"
django-cors-headers = "^3.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
